--- a/components/toolbar/style.scss
+++ b/components/toolbar/style.scss
@@ -1,9 +1,6 @@
 .components-toolbar {
-	margin: 0;
-	border: 1px solid $light-gray-500;
-	box-shadow: $shadow-popover;
-	background-color: $white;
 	display: inline-flex;
+	border-right: 1px solid $light-gray-500;
 }
 
 ul.components-toolbar {
