--- a/editor/assets/stylesheets/_z-index.scss
+++ b/editor/assets/stylesheets/_z-index.scss
@@ -16,6 +16,7 @@ $z-layers: (
 	'.components-panel__header': 1,
 	'.editor-block-mover': 10,
 	'.editor-header': 20,
+	'.editor-visual-editor__block-toolbar': 20,
 	'.editor-post-schedule__dialog': 30,
 
 	// Show drop zone above most standard content, but below any overlays
