--- a/editor/block-switcher/style.scss
+++ b/editor/block-switcher/style.scss
@@ -1,15 +1,9 @@
 .editor-block-switcher {
-	border: 1px solid $light-gray-500;
-	box-shadow: $shadow-popover;
-	background-color: $white;
+	display: inline-block;
+	border-right: 1px solid $light-gray-500;
 	font-family: $default-font;
 	font-size: $default-font-size;
 	line-height: $default-line-height;
-	margin-right: -1px;
-
-	@include break-small() {
-		margin-right: $item-spacing;
-	}
 }
 
 .editor-block-switcher__toggle {
