Validation: Offer option to overwrite (ignore) invalid block

--- a/editor/modes/visual-editor/style.scss
+++ b/editor/modes/visual-editor/style.scss
@@ -477,4 +477,8 @@ $sticky-bottom-offset: 20px;
 		font-family: $default-font;
 		font-size: $default-font-size;
 	}
+
+	.button + .button {
+		margin-left: $item-spacing;
+	}
 }
